# postgresql-cdc

./: .gitignore  README.md  pyproject.toml
docker/: docker-compose.yaml  postgres-docker.yaml  readme.md
docker/container/connect/: Dockerfile
docker/debezium/: debezium.json  run-connector.txt  s3-sink.json
docker/src/: my_spark_docker.py  utils.py
kafka/: consumer.ipynb  consumer.py
spark/: my_spark.py
src/: create_database.py  db.py  example.env  generate_incremental_data.py  generate_initial_data.py  main.py
